--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,19 @@ a:hover {color: magenta; }
   position:relative;
 }
 
-.task {
+.welcome {
     top: 60px;
     font-size: 40px;
     font-weight: bolder;
     color: magenta;
     background-color: yellow;
     width: 180px;
+    padding-left: 5px;
     display: inline-block;
     position: absolute;
 }
 
-.box {
+.card {
   position:absolute;
   width: 300px;
   height: 400px;
@@ -51,37 +52,61 @@ a:hover {color: magenta; }
   padding: 10px;
 }
 
-#card1.research{
+#card1{
   top: 60px;
   left: 190px;  
 }
-#card2.critical-texts{
+#card2{
   top: 90px;
   left: 220px;   
 }
-#card3.news {   
+#card3 {   
   top: 120px;
   left: 250px;
 }
-#card4.internet-empire {
+#card4 {
   top: 150px;
   left: 280px;
 }
-#card5.labor {
+#card5 {
   top: 180px;
   left: 310px;  
 }
-#card6.making-others {
+#card6 {
   top:210px;
   left: 340px;
 }
-#card7.making-you {   
+#card7 {   
   top: 240px;
   left: 370px;
 }
-#card8.commissioning-body {
+#card8 {
   top: 240px;
-  left: 710px;
+  left: 890px;
+}
+#card9 {
+  top:210px;
+  left: 860px;
+}
+#card10 {
+  top:180px;
+  left: 830px;
+}
+#card11 {
+  top: 150px;
+  left: 800px;
+}
+#card12 {
+  top: 120px;
+  left: 770px;
+}
+#card13{
+  top: 90px;
+  left:740px;
+}
+#card14{
+  top:60px;
+  left:710px;
 }
 
 .labor {
@@ -89,7 +114,7 @@ a:hover {color: magenta; }
   background-size: 90%;
 }
 .internet-empire {
-  background-image: url('http://media.giphy.com/media/IcStLavfAdhoQ/giphy.gif'); 
+  background-image: url('../img/empire.gif'); 
   background-position: -100px 0;
 }
 .vip {
@@ -125,7 +150,7 @@ a:hover {color: magenta; }
 #info{
     position: fixed;
     bottom:0;
-    right:0;
+    left:0;
     height:40px;
     width:40px;
     background-color: magenta;
