added sweepstakes page

--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,7 @@ a:hover {color: magenta; }
 }
 
 /*******************************
-state
+popup
 ********************************/
 
 a#openPopUp:hover{
