--- a/templates/index.html
+++ b/templates/index.html
@@ -64,265 +64,9 @@
 </marquee>
 </div>
 
-<!--START: CONTACT MODAL-->
-<aside id="contact-modal" class="popup">
-  <div class="popUpContainer">
-    <header>
-      <a href="#!" class="closePopUp">X</a>
-      <h2>Contact Us</h2>
-    </header>
-    <article class="modal-text">
-
-      <p class="email"><img src="img/mail.gif"><span><a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a></span></p>
-
-    </article>
-  </div>        
-  <a href="#!" class="closePopUpOutSide"></a>    
-</aside>
-<!--END: CONTACT MODAL-->
-
-<!--START: ABOUT MODAL-->
-<aside id="hello" class="popup">
-  <div class="popUpContainer">
-    <header>
-      <a href="#!" class="closePopUp">X</a>
-      <h2>We are two commissioning bodies</h2>
-    </header>
-    <article class="modal-text">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
-
-      <br/><hr>
-
-      <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
-
-      <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
-    </article>
-  </div>        
-  <a href="#!" class="closePopUpOutSide"></a>    
-</aside>
-<!--END: ABOUT MODAL-->
-
-<!-- START: NAVIGATION -->
-
-<!-- Dash Navbar Button -->
-<button class="dnl-btn-toggle">
-  <span class="fa fa-bars"></span>
-</button>
-
-<!-- Dash Navbar Left 
-Available versions: dnl-visible, dnl-hidden -->
-<div class="dash-navbar-left dnl-hidden">
-  <!-- <img class ="img-responsive anx-icon" src="img/anxious-icon.gif"> -->
-  <img class ="img-responsive anx-logo" src="img/anxious-logo-magenta.png">
-  <div class="clearfix"></div>
-  <p class="dnl-nav-title">Work</p>
-  <ul class="dnl-nav">
-    <li>
-      <a class="collapsed" data-toggle="collapse" href="#collapseStatistics" aria-expanded="false" aria-controls="collapseStatistics">
-        <span class="fa fa-database dnl-link-icon"></span>
-        <span class="dnl-link-text">Generators</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseStatistics">
-        <li>
-          <a href="projectgenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">Project Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="brandgenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">Brand Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="newidgenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">New ID Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="publicitygenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">Publicity Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="toughlovegenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">Tough Love Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="confidencegenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">Confidence Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="mugruggenerator.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">Mug/Rug Generator</span>
-          </a>
-        </li>
-        <li>
-          <a href="importantthings.html">
-            <span class="fa fa-database dnl-link-icon"></span>
-            <span class="dnl-link-text">More Important Art Generator</span>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <a class="collapsed" data-toggle="collapse" href="#collapseCommissions" aria-expanded="false" aria-controls="collapseCommissions">
-        <span class="fa fa-file-o dnl-link-icon"></span>
-        <span class="dnl-link-text">Commissions</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseCommissions">
-        <li>
-          <a href="performativeremoval.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Performative Removal of Creative Block</span>
-          </a>
-        </li>
-        <li>
-          <a href="nevertalkaboutyourworkagain.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Human Billboard to Talk About Your Work</span>
-          </a>
-        </li>
-        <li>
-          <a href="unfamiliarmaterials.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
-          </a>
-        </li>
-        <li>
-          <a href="forecasting.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
-          </a>
-        </li>
-        <li>
-          <a href="externalizedistrust.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance to Externalize Distrust</span>
-          </a>
-        </li>
-        <li>
-          <a href="hypnosis.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Hypnosis to Engender Trust</span>
-          </a>
-        </li>
-        <li>
-          <a href="twins.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
-          </a>
-        </li>
-        <li>
-          <a href="timemanagement.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Custom Audio Track for Motivation</span>
-          </a>
-        </li>
-        <li>
-          <a href="fucklabor.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Fuck Labor. Write Scripts, Commission Animals</span>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>
-    <a class="collapsed" data-toggle="collapse" href="#collapseDownloads" aria-expanded="false" aria-controls="collapseDownloads">
-        <span class="fa fa-download dnl-link-icon"></span>
-        <span class="dnl-link-text">Downloads</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseDownloads">
-        <li>
-          <a href="5easysteps.html">
-            <span class="fa fa-file-pdf-o dnl-link-icon"></span>
-            <span class="dnl-link-text">How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook</span>
-          </a>
-        </li>
-        <li>
-          <a href="media/RitualsForRemovingCreativeBlocks.pdf">
-            <span class="fa fa-file-pdf-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Rituals for Removing Creative Blocks</span>
-          </a>
-        </li>
-        <li>
-          <a href="media/ContractForAudienceOfOne.pdf">
-            <span class="fa fa-file-pdf-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Contract for Audience of One</span>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>
-    <a class="collapsed" data-toggle="collapse" href="#collapseQuizzes" aria-expanded="false" aria-controls="collapseQuizzes">
-        <span class="fa fa-question dnl-link-icon"></span>
-        <span class="dnl-link-text">Quizzes &amp; Surveys</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseQuizzes">
-        <li>
-          <a href="moneyquiz.html">
-            <span class="fa fa-question dnl-link-icon"></span>
-            <span class="dnl-link-text">Would Money Be All I Really Need to Succeed?</span>
-          </a>
-        </li>
-        <li>
-          <a href="makingyou.html">
-            <span class="fa fa-question dnl-link-icon"></span>
-            <span class="dnl-link-text">Important Research: <em>Making You</em> Survey</span>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <a href="sweepstakes.html">
-        <span class="fa fa-trophy dnl-link-icon"></span>
-        <span class="dnl-link-text">Sweepstakes</span>
-      </a>
-    </li>
-    <li>
-      <a href="store.html">
-        <span class="fa fa-shopping-cart dnl-link-icon"></span>
-        <span class="dnl-link-text">Store</span>
-      </a>
-    </li> 
-    <p class="dnl-nav-title">Info</p>
-    <li>
-      <a href="#contact-modal">
-        <span class="fa fa-envelope-o dnl-link-icon"></span>
-        <span class="dnl-link-text">Contact</span>
-      </a>
-    </li>
-    <li>
-      <a href="#hello" id="openpopup">
-        <span class="fa fa-info-circle dnl-link-icon"></span>
-        <span class="dnl-link-text">About</span>
-      </a>
-    </li>
-    <li>
-      <a href="index.html">
-        <span class="fa fa-home dnl-link-icon"></span>
-        <span class="dnl-link-text">Home</span>
-      </a>
-    </li>       
-  </ul>      
-</div><!-- /.dash-navbar-left -->
-<!--END: NAVIGATION-->
+@@include('../partials/_contact.html')
+@@include('../partials/_about.html')
+@@include('../partials/_nav.html')
 
 <a href="#hello" id="openpopup"><div id="info"><img src="img/info.gif"/></div></a>
 
