--- a/partials/_nav.html
+++ b/partials/_nav.html
@@ -5,11 +5,9 @@
   <span class="fa fa-bars"></span>
 </button>
 
-<!-- Dash Navbar Left 
-Available versions: dnl-visible, dnl-hidden -->
+<!-- Dash Navbar Left -->
 <div class="dash-navbar-left dnl-hidden">
-  <!-- <img class ="img-responsive anx-icon" src="img/anxious-icon.gif"> -->
-  <img class ="img-responsive anx-logo" src="img/anxious-logo-magenta.png">
+  <a href="/"><img class ="img-responsive anx-logo" src="img/anxious-logo-bubblegum.png"></a>
   <div class="clearfix"></div>
   <p class="dnl-nav-title">Work</p>
   <ul class="dnl-nav">
@@ -81,7 +79,7 @@ Available versions: dnl-visible, dnl-hidden -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
           <a href="performativeremoval.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Removal of Creative Block</span>
           </a>
         </li>
@@ -93,37 +91,37 @@ Available versions: dnl-visible, dnl-hidden -->
         </li>
         <li>
           <a href="unfamiliarmaterials.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
           </a>
         </li>
         <li>
           <a href="forecasting.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
           </a>
         </li>
         <li>
           <a href="externalizedistrust.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performance to Externalize Distrust</span>
           </a>
         </li>
         <li>
           <a href="hypnosis.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Hypnosis to Engender Trust</span>
           </a>
         </li>
         <li>
           <a href="twins.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
           </a>
         </li>
         <li>
           <a href="timemanagement.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
+            <span class="fa fa-volume-down dnl-link-icon"></span>
             <span class="dnl-link-text">Custom Audio Track for Motivation</span>
           </a>
         </li>
