--- a/css/mugrug.css
+++ b/css/mugrug.css
@@ -1,7 +1,7 @@
 body {
   background: url("../img/clouds.gif") no-repeat;
   background-size: cover;
-  height: 3000px;
+  height: 3700px;
   width: 3000px;
 }
 
@@ -11,7 +11,7 @@ body {
     position: absolute;
     width: 500px;
     height: 500px;
-    top: 50%;
+    top: 400px;
     left: 50%;
     margin-left: -250px;
     margin-top: -250px;   
@@ -77,7 +77,7 @@ body {
     position: absolute;
     width: 100%;
     text-align: center;
-    top: 50%;
+    top: 400px;
     margin-top: 250px;
     margin-left: 50px;
     z-index: 9999;
@@ -112,7 +112,7 @@ body {
 }
 .rug2 {
   background: url("../img/rugs-2.gif") no-repeat;
-  top: 140%;
+  top: 2000px;
   left: 30%;
   z-index: 9;
 }
@@ -125,7 +125,7 @@ body {
 }
 .rug4 {
   background: url("../img/rugs-4.gif") no-repeat;
-  top: 50%;
+  top: 400px;
   left: 0;
   z-index: 11;       
 }
@@ -137,7 +137,7 @@ body {
 }
 .rug6 {
   background: url("../img/rugs-6.gif") no-repeat;
-  top: 0;
+  top: 40px;
   left: 0;
   z-index: 8; 
 }
@@ -149,7 +149,7 @@ body {
 }
 .rug8 {
   background: url("../img/rugs-8.gif") no-repeat;
-  top: 60%;
+  top: 500px;
   left: 0;
   z-index: 11; 
 }
