--- a/templates/store.html
+++ b/templates/store.html
@@ -27,36 +27,23 @@
     <meta name="twitter:creator" content="@Resonator11">
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/store-pillow.jpg">
 
-    <!-- CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/dash.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <style>button.dnl-btn-toggle{top:inherit; bottom:0; right:0;}</style>
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elemdnts and media queries -->
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
+@@include('../partials/_css.html')
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="img/ico" href="img/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-    <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 <body>
 
 @@include('../partials/_contact.html')
 @@include('../partials/_about.html')
 @@include('../partials/_nav.html')
+@@include('../partials/_header.html')
 
-<iframe src="https://squareup.com/store/anxious-to-make/" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+<!--START: MAIN CONTENT-->
+<div class="main-content">
+<iframe src="https://squareup.com/store/anxious-to-make/" style="border: 0; position:absolute; top:38px; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
+</div>
+<!--END: MAIN CONTENT-->
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.touchSwipe.min.js"></script>
-<script src="js/dash.js"></script>
+@@include('../partials/_js.html')
 
 </body>
 </html>
